--- a/front-end/src/styles/globals.css
+++ b/front-end/src/styles/globals.css
@@ -115,3 +115,10 @@ h3 {
   text-decoration: none;
   padding: 8px;
 }
+
+.folder button {
+  background-color: transparent;
+  color: inherit;
+  text-decoration: underline;
+  font-size: inherit;
+}
